// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/patients DELETE / /:patientId - delete patient 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/patients DELETE / /:patientId - delete patient then undelete it 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;

exports[`/api/patients GET / / - get all patients under a clinic - connector not notSynced 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
      "eb6be674-1861-4432-8a2e-48c402ba2aba": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": Object {},
        "birthDate": null,
        "contCareInterval": null,
        "email": "batchpatient2@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "McInvalid2",
        "gender": null,
        "homePhoneNumber": null,
        "id": "eb6be674-1861-4432-8a2e-48c402ba2aba",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "McInvalid2",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17784444444",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": null,
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
    "eb6be674-1861-4432-8a2e-48c402ba2aba",
  ],
}
`;

exports[`/api/patients GET / / - get all patients under a clinic 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
      "eb6be674-1861-4432-8a2e-48c402ba2aba": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": Object {},
        "birthDate": null,
        "contCareInterval": null,
        "email": "batchpatient2@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "McInvalid2",
        "gender": null,
        "homePhoneNumber": null,
        "id": "eb6be674-1861-4432-8a2e-48c402ba2aba",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "McInvalid2",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17784444444",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": null,
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
    "eb6be674-1861-4432-8a2e-48c402ba2aba",
  ],
}
`;

exports[`/api/patients GET / /:patientId - retrieve a patient 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;

exports[`/api/patients GET / /:patientId/nextAppointment - retrieve patients next appointments 1`] = `
Object {
  "entities": Object {},
  "result": Array [],
}
`;

exports[`/api/patients GET / /:patientId/stats - retrieve patient appointments 1`] = `
Object {
  "allApps": 1,
  "entities": Object {},
  "lastAppointment": "2017-07-21T00:14:30.932Z",
  "monthsApp": 1,
  "nextAppointment": null,
  "productionCalendarYear": null,
}
`;

exports[`/api/patients GET / /search - search patients - no results 1`] = `
Object {
  "entities": Object {
    "chats": Object {},
    "patients": Object {},
    "textMessages": Object {},
  },
  "result": Array [],
}
`;

exports[`/api/patients GET / /search - search patients - phone number found 1`] = `
Object {
  "entities": Object {
    "chats": Object {},
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "appointments": Array [],
        "birthDate": "1980-01-01T00:00:00.932Z",
        "chats": Array [],
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
    "textMessages": Object {},
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/patients GET / /search - search patients - phone number not found 1`] = `
Object {
  "entities": Object {
    "chats": Object {},
    "patients": Object {},
    "textMessages": Object {},
  },
  "result": Array [],
}
`;

exports[`/api/patients GET / /search - search patients - result found 1`] = `
Object {
  "entities": Object {
    "chats": Object {},
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "appointments": Array [],
        "birthDate": "1980-01-01T00:00:00.932Z",
        "chats": Array [],
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
    "textMessages": Object {},
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/patients GET / /stats - retrieve patients appointments 1`] = `
Object {
  "ageData": Array [
    0,
    0,
    0,
    100,
    0,
    0,
  ],
  "entities": Object {},
  "female": 1,
  "male": 0,
}
`;

exports[`/api/patients GET / /suggestions - no result found 1`] = `
Object {
  "entities": Object {},
  "result": Array [],
}
`;

exports[`/api/patients GET / /suggestions - result found 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "appointments": Array [],
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": Array [
    "10518e11-b9d2-4d74-9887-29eaae7b5938",
  ],
}
`;

exports[`/api/patients POST / / - create a patient 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;

exports[`/api/patients POST / /emailCheck - result found 1`] = `
Object {
  "entities": Object {},
  "exists": true,
}
`;

exports[`/api/patients POST / /emailCheck - result not found 1`] = `
Object {
  "entities": Object {},
  "exists": false,
}
`;

exports[`/api/patients POST / /phoneNumberCheck - result found 1`] = `
Object {
  "entities": Object {},
  "exists": true,
}
`;

exports[`/api/patients POST / /phoneNumberCheck - result not found 1`] = `
Object {
  "entities": Object {},
  "exists": false,
}
`;

exports[`/api/patients PUT / /:patientId - update patient 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Wendy",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;

exports[`/api/patients PUT / /connector/:patientId - update patient (connector) 1`] = `
Object {
  "entities": Object {
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "contCareInterval": null,
        "email": "testpatient@test.com",
        "familyId": null,
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Testing",
        "gender": null,
        "homePhoneNumber": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPms": true,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "reminders": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
  },
  "result": "10518e11-b9d2-4d74-9887-29eaae7b5938",
}
`;
